# Chiron-GUI

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.turbo/cache/: 223d33fdc30724cb-meta.json  223d33fdc30724cb.tar.zst  8df5f8fb088dc74e-meta.json  8df5f8fb088dc74e.tar.zst  ac87ba3f718d053b-meta.json  ac87ba3f718d053b.tar.zst  b00194a0488497db-meta.json  b00194a0488497db.tar.zst  b3609fd6171c2a43-meta.json  b3609fd6171c2a43.tar.zst  bacae5f24ab3eb98-meta.json  bacae5f24ab3eb98.tar.zst  dceb847e9675d89d-meta.json  dceb847e9675d89d.tar.zst
.turbo/daemon/: 9cd819d7a8cab306-turbo.log.2025-10-06
apps/api/: pyproject.toml
apps/api/src/chiron_api/: __init__.py  __main__.py  app.py  config.py
apps/api/src/chiron_api/db/: __init__.py  models.py  session.py
apps/api/src/chiron_api/routers/: __init__.py  airgap.py  auth.py  dashboard.py  health.py  info.py  process.py  wheelhouse.py
apps/api/src/chiron_api/schemas/: dashboard.py
apps/api/src/chiron_api/services/: auth.py  bootstrap.py  instrumentation.py  streaming.py  telemetry.py
apps/web/: README.md  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/hooks/: useDashboardStream.ts  useDashboardSummary.ts  useDashboardSync.ts  useOnlineStatus.ts
apps/web/src/lib/: chiron-api.ts
docs/: architecture.md  implementation-plan.md
