[tool.poetry]
name = "chiron-api"
version = "0.1.0"
description = "Chiron service fabric FastAPI application"
authors = ["Chiron Team <dev@chiron.io>"]
packages = [{ include = "chiron_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.4"
udatetime = ">=0.0.17"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
uvicorn = { version = "0.32.0", extras = ["standard"] }
prisma = "0.15.0"
asyncpg = "0.29.0"
redis = "5.1.0"
celery = "5.4.0"
httpx = "0.27.2"
loguru = "0.7.2"
python-json-logger = "2.0.7"
structlog = "24.1.0"
openai = "2.1.0"
langchain = "0.3.27"
langgraph = "0.0.69"
open-telemetry-exporter-otlp = "1.26.0"
setuptools = "70.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
ruff = "0.6.9"
black = "24.10.0"
httpx = "0.27.2"
pre-commit = "3.8.0"

[tool.poetry.scripts]
chiron-api = "chiron_api.__main__:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
