[tool.poetry]
name = "chiron-api"
version = "0.1.0"
description = "Chiron service fabric FastAPI application"
authors = ["Chiron Team <dev@chiron.io>"]
packages = [{ include = "chiron_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.4"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
uvicorn = { version = "0.37.0", extras = ["standard"] }
opentelemetry-sdk = "1.28.2"
opentelemetry-exporter-otlp = "1.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
ruff = "0.6.9"
black = "24.10.0"
pre-commit = "3.8.0"

[tool.poetry.scripts]
chiron-api = "chiron_api.__main__:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
