[tool.poetry]
name = "chiron-api"
version = "0.1.0"
description = "Chiron service fabric FastAPI application"
authors = ["Chiron Team <dev@chiron.io>"]
packages = [{ include = "chiron_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.118.0"
pydantic = "2.11.10"
pydantic-settings = "2.11.0"
uvicorn = { version = "0.37.0", extras = ["standard"] }
opentelemetry-sdk = "1.37.0"
opentelemetry-exporter-otlp = "1.37.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-asyncio = "1.2.0"
ruff = "0.13.3"
black = "25.9.0"
pre-commit = "4.3.0"

[tool.poetry.scripts]
chiron-api = "chiron_api.__main__:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
